fixed z-index issue preventing links from being clickable

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,7 +28,7 @@ main{
     height: 100vh;
     padding: 4rem;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 
     //Social Icons
     .icons{
